<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8E4FF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.indoorlocatingclient.MainActivity" >

    <TextView
        android:id="@+id/des_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/input_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
        android:id="@+id/des_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/des_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:completionThreshold="3"
        android:maxLines="2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_hint" >

        <requestFocus />
    </AutoCompleteTextView>

    <ListView
        android:id="@+id/wifi_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/des_edit"
        android:layout_centerHorizontal="true"
        android:background="#7594B3"
        android:layout_marginBottom="150dp"
        android:dividerHeight="@dimen/divider_size"
        android:padding="@dimen/item_padding" >

    </ListView>

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wifi_info_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="20dp"
        android:text="@string/scan_string" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@id/scan_button"
        android:text="@string/upload_string" />

    <Button
        android:id="@+id/locate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/wifi_info_text"
        android:layout_marginRight="20dp"
        android:layout_alignBaseline="@id/scan_button"
        android:text="@string/locate_string" />

    <TextView
        android:id="@+id/locate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/locate_info_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/locate_info_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:background="#7594B3"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textsize_large" />

</RelativeLayout>